first pass at animating body with left menu TODO: make sure it only happens on mobile and table, also on mobile at titles to left menu items.

--- a/mockitbrd_web/public/js/app/templates/scss/dashboard.scss
+++ b/mockitbrd_web/public/js/app/templates/scss/dashboard.scss
@@ -5,6 +5,10 @@
 	width: 100%;
 	height: 100%;
 	background: $dashboard_bg;
+	-webkit-transition-property: left;
+    -webkit-transition-duration: 0.5s;
+    position: relative;
+    left: 0;
 }
 
 .dashboard-calendar-view {
