--- a/mockitbrd_web/public/scss/desktop.scss
+++ b/mockitbrd_web/public/scss/desktop.scss
@@ -13,7 +13,7 @@ html, body, #page, #left-header, #dashboard {
 }
 
 #left-header {float: left;}
-#dashboard {display: none;}
+#dashboard {display: none; background: $dashboard_bg;}
 
 a {
 	color: $primary_blue;
